<resources>

    <!--PRODUCT PAGE-->
    <string name="app_name">Sneaker_addict</string>
    <string name="nom_artiste">SneakyGirl</string>
    <string name="nom_produit">VANS Carpe Koï</string>
    <string name="prix_article">120 €</string>
    <string name="acheter">Acheter</string>
    <string name="taille">Taille :</string>

    <!--ALL THE PRODUCTS-->
    <string-array name="creation_name">
        <item>Template vide</item>
        <item>Naruto</item>
        <item>Monopoly Stan Smith</item>
        <item>Vans pizza</item>
        <item>Vans ananas dorée</item>
        <item>Air Force 1 Dragon rouge</item>
        <item>Air Force 1 Hokusai vague</item>
        <item>VANS Carpe Koï</item>
    </string-array>

    <string-array name="description">
        <item>SneakyGirl</item>
        <item>SneakyGirl</item>
        <item>SneakyGirl</item>
        <item>SneakyGirl</item>
        <item>SneakyGirl</item>
        <item>SneakyGirl</item>
        <item>SneakyGirl</item>
        <item>SneakyGirl</item>
    </string-array>


    <!--HOME PAGE-->
    <string name="artiste_talent">Nos artistes ont du talent</string>
    <string name="nom_artiste_sneakyboy">SneakyBoy</string>
    <string name="voir_plus">voir plus</string>
    <string name="derniere_crea_titre">Leurs dernières créations</string>
    <string name="accueil_titre_crea">Shoes in color</string>
    <string name="accueil_prix">120€</string>
    <string name="explication1">
        Prends contact avec le ou
        les artistes qui te plaisent
        via la messagerie.
    </string>
    <string name="explication2">
        Echange avec ton ou tes
        artistes sur les détailes de
        ton projet.
    </string>
    <string name="explication3">
        Commande tes sneakers
        personnalisées via la
        plateforme.
    </string>
    <string name="explication4">
        Tu seras prévelé du montant
        de la commande à réception
        de cette dernière.
    </string>


    <!--PROFILE PAGE-->
    <string name="btn_parameters">Paramètres</string>
    <string name="btn_histo">Mes achats et ventes</string>
    <string name="btn_add_product"> Ajouter une création</string>
    <string name="btn_bundle">Envie de plus de visibilité</string>
    <string name="btn_a_propos">A Propos</string>
    <string name="btn_aide">Aide</string>
    <string name="btn_deco">Déconnexion</string>

    <!--Parameters section-->
    <string name="titre_page_param">Paramètres</string>
    <string name="titre_page_addprod">Ajouter une création</string>
    <string name="add_img">Choisissez un visuel</string>
    <string name="add_titre_prod">Ajouter un titre</string>
    <string name="add_descri_prod">Détails sur votre création</string>
    <string name="add_taille_prod">Les tailles disponibles</string>
    <string name="modifier">Modifier</string>
    

    <string name="adresse_livraison">
        55 rue Pierre De Coubertin,
        31400 TOULOUSE
    </string>

    <!--BOTTOM NAVIGATON VIEW-->
    <string name="bottom_nav_menu_home">Accueil</string>
    <string name="bottom_nav_menu_product">Produit</string>
    <string name="bottom_nav_menu_fav">Favoris</string>
    <string name="bottom_nav_menu_message">Messages</string>
    <string name="bottom_nav_menu_profil">Profil</string>
    <string name="textView_aPropos">
        Bonjour, je m\'appelle Sneaky Girl et je suis une infographiste.
        J\'ai plus de 3 ans d\'expérience dans l\'industrie du jeu en tant qu\'artiste 2D.
        Actuellement, je me développe une passion pour l\'univers Ghibli ! Je suis super fan
        de Totoro notamment :).
        J\'ai un style très graphique, spécialisé dans le line art et les design de personnages.
    </string>

    <!--PRODUCTS OF THE ARTISTES-->
    <string-array name="product_name_artisteprofil">
        <item>Nausicaa, Ghibli</item>
        <item>Princesse Mononoke, Ghibli</item>
        <item>Totoro, Ghibli</item>
    </string-array>

    <string-array name="product_price_artisteprofil">
        <item>120€</item>
        <item>90€</item>
        <item>200€</item>
    </string-array>
    
    <!--COMMENTS ON THE ARTISTE'S PROFILE-->
    <string-array name="comments_clientname_artisteprofil">
        <item>Jeff Lamda</item>
        <item>Martine Quelkonc</item>
        <item>Roger Commun</item>
    </string-array>
    
    <string-array name="comments_comments_artisteprofil">
        <item>Au top, super rapide, un travail précis pour un résultat canon ! Je tweete direct…</item>
        <item>Super ! Mes chaussures sont trop belles !</item>
        <item>J\'aurais aimé que les couleurs brillent plus mais bon, bon travail sinon. Envoie rapide.</item>
    </string-array>

    <string-array name="comments_avis_artisteprofil">
        <item>18/03/2021</item>
        <item>07/04/2021</item>
        <item>10/04/2021</item>
    </string-array>

</resources>