<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_homepage"
        android:enabled="true"
        android:icon="@drawable/selector_home"
        android:title="@string/bottom_nav_menu_home"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_produit"
        android:enabled="true"
        android:icon="@drawable/selector_product"
        android:title="@string/bottom_nav_menu_product"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_favoris"
        android:enabled="true"
        android:icon="@drawable/selector_favoris"
        android:title="@string/bottom_nav_menu_fav"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_message"
        android:enabled="true"
        android:icon="@drawable/selector_message"
        android:title="@string/bottom_nav_menu_message"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_profil"
        android:enabled="true"
        android:icon="@drawable/selector_profil"
        android:title="@string/bottom_nav_menu_profil"
        app:showAsAction="ifRoom"/>


</menu>