<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/product_of_artist_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!-- PRES ARTISTE CARD -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_artiste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/avatar_artiste_pg_prod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                android:scaleType="fitCenter"
                android:src="@drawable/avatar_artiste"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nom_artiste_pg_prod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/mulish_regular"
                android:text="@string/nom_artiste"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/avatar_artiste_pg_prod"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layout_nb_etoile"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@+id/avatar_artiste_pg_prod"
                app:layout_constraintTop_toBottomOf="@+id/nom_artiste_pg_prod">

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <!-- CAROUSEL ITEM IMAGES recycler view -->
    <LinearLayout
        android:id="@+id/layout_slider_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_artiste">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_slider_item_artiste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

     </LinearLayout>
     <LinearLayout
         android:id="@+id/layout_info_product"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginStart="20dp"
         android:layout_below="@+id/layout_slider_product">

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/nom_produit"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/prix_article"/>
         <LinearLayout
             android:id="@+id/layout_spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:text="@string/taille"/>
             <Spinner
                 android:id="@+id/spinner_size"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 />
         </LinearLayout>


     </LinearLayout>
        <Button
            android:id="@+id/button_acheter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acheter"
            android:layout_below="@+id/layout_info_product"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>

